# IC

./: .gitignore  CMakeLists.txt  README.md
Aula01/: CMakeLists.txt  file.txt
Aula01/src/: P1.cpp  P2.cpp
Project1/: CMakeLists.txt  README.md
Project1/matplotlib/: matplotlibcpp.h
Project1/src/: P1.cpp
Project2/: Encoder.cpp  README.md  bitstream  decoder  encoder
Project2/Headers/: BitStream.h  Decoder.h
Projeto_2/: .gitignore  Decoder.cpp  Encoder.cpp  IC_Project2_108250_108579_107542.pdf:Zone.Identifier
Projeto_2/Part_I/: BitStream.cpp  CMakeLists.txt  Decoder.cpp  Encoder.cpp  README.md  main.tex
Projeto_2/Part_I/Headers/: BitStream.h
Projeto_2/Part_I/data/: Fake_Binary.txt
Projeto_2/Part_II/: BitStream.cpp  CMakeLists.txt  Golomb.cpp  GolombTests.cpp
Projeto_2/Part_II/Headers/: BitStream.hpp  Golomb.hpp
Projeto_2/Part_II/data/: py_script.py
Projeto_2/Part_III/: CMakeLists.txt  Golomb.cpp  README.md  audio.cpp
Projeto_2/Part_III/Headers/: Golomb.hpp  audio.hpp
Projeto_2/Part_IV/: BitStream.cpp  CMakeLists.txt  Converter.cpp  Golomb.cpp  InterDecoder.cpp  InterDecoderTest.cpp  InterEncoder.cpp  InterEncoderTest.cpp  InterFrameTest.cpp  IntraDecoder.cpp  IntraDecoderTest.cpp  IntraEncoder.cpp  IntraEncoderTest.cpp  IntraTester.cpp  LossyVideoCodec.cpp  Predictor.cpp  PredictorTest.cpp  README.md
Projeto_2/Part_IV/Headers/: BitStream.hpp  Golomb.hpp  InterDecoder.hpp  InterEncoder.hpp  InterFrame.hpp  IntraDecoder.hpp  IntraEncoder.hpp  Predictor.hpp
Projeto_2/Part_IV/data/: encoded_decoded.ppm
Projeto_2/Part_IV/src/: LossyVideoCodec.cpp  LossyVideoDecoderDCT.cpp  LossyVideoEncoder.cpp  main.cpp
Projeto_2/Part_IV/src/codecs/: BitStream.cpp  Converter.cpp  DCTUtils.cpp  Golomb.cpp  InterDecoder.cpp  InterEncoder.cpp  IntraDecoder.cpp  IntraEncoder.cpp  Predictor.cpp
Projeto_2/Part_IV/src/headers/: Converter.hpp  DCTUtils.hpp  IntraDecoder.hpp  IntraEncoder.hpp  Predictor.hpp
Projeto_2/Part_IV/test/test_code/: GolombTests.cpp  InterDecoderTest.cpp  InterEncoderTest.cpp  IntraDecoderTest.cpp  IntraEncoderTest.cpp
src/: Laranjo.cpp  LaranjoP3.cpp  LaranjoT2.cpp  P3.cpp
trab1/: CMakeLists.txt  Laranjo.cpp  part1.cpp  part2.cpp  pltT2.py  pltT3.py  pltT4.py  t1.txt
trab1/samples/: left_channel_histogram.txt  mid_channel_histogram.txt  right_channel_histogram.txt  side_channel_histogram.txt
